Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6985719/T6985719d.out
T6985719d.java:14:14: compiler.err.name.clash.same.erasure.no.override: f, java.util.List<java.lang.Integer>, T6985719d.B, f, java.util.List<java.lang.String>, T6985719d.A
1 error
